Change how we fetch and manage entries

--- a/40-jdbc.conf
+++ b/40-jdbc.conf
@@ -7,16 +7,16 @@ input {
         jdbc_user => "${JDBC_HARVEST_USER}"
         jdbc_password => "${JDBC_HARVEST_USER_PASSWORD}"
         statement_filepath => "/opt/logstash/harvester-statement"
-        schedule => "0 * * * *"
-        use_column_value => true
-        tracking_column => entry_id
+        schedule => "* * * * *"
+        tracking_column => entry_updated_at
         type => "harvester"
+        tracking_column_type => timestamp
     }
 }
 output {
     elasticsearch {
         hosts => ["localhost"]
         document_type => "%{type}"
-        document_id => "%{entry_id}"
+        document_id => "%{[@metadata][_id]}"
     }
 }
