Fix indexing bug

--- a/40-jdbc.conf
+++ b/40-jdbc.conf
@@ -11,12 +11,15 @@ input {
         tracking_column => entry_updated_at
         type => "harvester"
         tracking_column_type => timestamp
+        last_run_metadata_path => "/opt/logstash/.logstash_jdbc_last_run"
     }
 }
 output {
-    elasticsearch {
-        hosts => ["localhost"]
-        document_type => "%{type}"
-        document_id => "%{[@metadata][_id]}"
+    if [type] == "harvester" {
+        elasticsearch {
+            document_type => "%{type}"
+            document_id => "%{entry_id}"
+        }
+        stdout { codec => rubydebug { metadata => true } }
     }
 }
